--- a/Alert/app/build.gradle
+++ b/Alert/app/build.gradle
@@ -1,13 +1,17 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'realm-android'
 apply plugin: 'io.fabric'
 
+
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28
     defaultConfig {
         applicationId "org.alertpreparedness.platform.alert"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -32,92 +36,93 @@ dependencies {
     implementation "ch.acra:acra-mail:$acraVersion"
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v4:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     // Glide image library
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    kapt 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
     //time processing
-    compile 'net.danlew:android.joda:2.9.9.1'
+    implementation 'net.danlew:android.joda:2.9.9.1'
     // FAB
-    compile 'com.github.clans:fab:1.6.4'
+    implementation 'com.github.clans:fab:1.6.4'
     // Firebase
-    compile 'com.google.firebase:firebase-core:11.8.0'
-    compile 'com.google.firebase:firebase-database:11.8.0'
-    compile 'com.google.firebase:firebase-auth:11.8.0'
-    compile 'com.google.firebase:firebase-storage:11.8.0'
-    compile 'com.google.firebase:firebase-messaging:11.8.0'
-    compile 'com.google.firebase:firebase-crash:11.8.0'
+    implementation 'com.google.firebase:firebase-core:16.0.6'
+    implementation 'com.google.firebase:firebase-database:16.0.5'
+    implementation 'com.google.firebase:firebase-auth:16.1.0'
+    implementation 'com.google.firebase:firebase-storage:16.0.5'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+    implementation 'com.google.firebase:firebase-crash:16.2.1'
 
     //toast
-    compile 'com.github.GrenderG:Toasty:1.2.5'
+    implementation 'com.github.GrenderG:Toasty:1.2.5'
     //compress
-    compile 'top.zibin:Luban:1.1.3'
+    implementation 'top.zibin:Luban:1.1.3'
     //memory leak
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.4'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
     //log
     implementation 'com.jakewharton.timber:timber:4.6.0'
     //views
-    compile 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    kapt 'com.jakewharton:butterknife-compiler:8.8.1'
     //async
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.6'
-    compile 'com.github.frangsierra:rx2firebase:1.1.3'
-    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
+    implementation 'com.github.frangsierra:rx2firebase:1.1.3'
+    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
     //kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile "org.jetbrains.anko:anko:0.10.2"
-    compile 'io.reactivex.rxjava2:rxkotlin:2.1.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.anko:anko:0.10.2"
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
     //for recycler view
-    compile 'com.thoughtbot:expandablerecyclerview:1.3'
+    implementation 'com.thoughtbot:expandablerecyclerview:1.3'
     //Architecture Components
-    implementation "android.arch.lifecycle:common-java8:1.0.0"
-    implementation "android.arch.lifecycle:extensions:1.0.0"
+    implementation "android.arch.lifecycle:common-java8:1.1.1"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
     //json
-    compile 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.google.code.gson:gson:2.8.2'
     //google play location
-    compile 'com.google.android.gms:play-services-location:11.8.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
     //badge
-    compile 'q.rorbin:badgeview:1.1.3'
+    implementation 'q.rorbin:badgeview:1.1.3'
 
-    compile 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    kapt 'com.jakewharton:butterknife-compiler:8.8.1'
 
-    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 
-    compile 'com.google.dagger:dagger:2.+'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.+'
-    //    compile 'io.realm:realm-android:4.1.1='
+    implementation 'com.google.dagger:dagger:2.21'
+    kapt 'com.google.dagger:dagger-compiler:2.21'
+    //    implementation 'io.realm:realm-android:4.1.1='
 
     //Sheet menu
-    compile 'com.github.whalemare:sheetmenu:1.3.3'
+    implementation 'com.github.whalemare:sheetmenu:1.3.3'
 
 
-    compile 'com.github.matthiasrobbers:shortbread:1.0.2'
-    annotationProcessor 'com.github.matthiasrobbers:shortbread-compiler:1.0.2'
-    compile('com.github.ozodrukh:CircularReveal:1.1.1@aar') {
+    implementation 'com.github.matthiasrobbers:shortbread:1.0.2'
+    kapt 'com.github.matthiasrobbers:shortbread-compiler:1.0.2'
+    implementation('com.github.ozodrukh:CircularReveal:1.1.1@aar') {
         transitive = true;
     }
 
     implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
-    compile 'com.android.support:multidex:1.0.3'
-    compile 'com.google.guava:guava:24.0-android'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.guava:guava:24.1-jre'
 
-    compile 'com.evernote:android-job:1.2.4'
+    implementation 'com.evernote:android-job:1.2.4'
 
-    compile('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
         transitive = true
     }
 
-    compile 'com.google.firebase:firebase-core:11.8.0'
+    implementation 'com.google.firebase:firebase-core:16.0.6'
 }
 
 // ADD THIS AT THE BOTTOM
